[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Player/AITest.gd" type="Script" id=1]

[node name="AITest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ctl_sims" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -63.0
margin_right = 440.0

[node name="btn_next" type="Button" parent="ctl_sims"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -45.0
margin_right = 98.0
margin_bottom = -9.0
text = "Step"

[node name="btn_leap" type="Button" parent="ctl_sims"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 106.0
margin_top = -45.0
margin_right = 198.0
margin_bottom = -9.0
text = "Leap"

[node name="btn_bigsim" type="Button" parent="ctl_sims"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 262.0
margin_top = -45.0
margin_right = 354.0
margin_bottom = -9.0
text = "Go For"

[node name="nud_bigsim" type="SpinBox" parent="ctl_sims"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 359.0
margin_top = -39.0
margin_right = 433.0
margin_bottom = -15.0
min_value = 1.0
value = 1.0

[node name="wait_timer" type="Timer" parent="ctl_sims"]
wait_time = 0.05

[node name="btn_add" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -547.0
margin_top = -45.0
margin_right = -455.0
margin_bottom = -9.0
text = "New AI"

[node name="vbox" type="VBoxContainer" parent="."]
margin_right = 1550.0
margin_bottom = 554.0
custom_constants/separation = 50

[node name="list" type="ItemList" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -447.0
margin_top = -251.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/vseparation = 15
same_column_width = true

[connection signal="pressed" from="ctl_sims/btn_next" to="." method="_on_btn_next_pressed"]
[connection signal="pressed" from="ctl_sims/btn_leap" to="." method="_on_btn_leap_pressed"]
[connection signal="pressed" from="ctl_sims/btn_bigsim" to="." method="_on_btn_bigsim_pressed"]
[connection signal="timeout" from="ctl_sims/wait_timer" to="." method="_on_wait_timer_timeout"]
[connection signal="pressed" from="btn_add" to="." method="_on_btn_add_pressed"]
[connection signal="item_selected" from="list" to="." method="_on_list_item_selected"]
